* Improved navigation styling * Additional page: overview * Improved "previewability"

--- a/WinkelPlanner/trunk/src/witspirit/appengine/winkelplanner/web/common/css/main.css
+++ b/WinkelPlanner/trunk/src/witspirit/appengine/winkelplanner/web/common/css/main.css
@@ -33,6 +33,10 @@ body {
 	float: left;
 }
 
+.navigation-menu .currentPage {
+	font-weight: bold;
+}
+
 .navigation-menu a {
 	display:block;
 	text-decoration: none;
